# afsm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
afsm/: afsm.py
atfsm/: __init__.py  __main__.py
atfsm/test/: test_afsm.py
