[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atfsm"
version = "0.1.0"
authors = [
  { name="Aleksei Romanenko", email="aleksei.romanenko@lut.fi" }
]
description = """Async-aware documentation-first Finite State Machine implementation.

Generates typed state machine code from UML diagram in PlantUML format.

Funded by the European Union and UKRI. Views and opinions expressed are however those of the author(s)
only and do not necessarily reflect those of the European Union, CINEA or UKRI. Neither the European Union
nor the granting authority can be held responsible for them.

"""
readme = "README.md"
requires-python = ">=3.12"
license = { text = "LGPL-2.1-or-later" }
keywords = ["fsm", "finite", "state", "machine", "async", "UML", "PlantUML"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = ["pyee", "beartype", "python-slugify", "ply"]
